# yavdr-backend

./: .gitignore  README.md  README.org  package-lock.json  pyproject.toml  requirements.txt  run.sh  run_backend.sh  run_system_backend.sh
app/: api_collection.py  auth.py  dependencies.py  main.py  routes.py  vdr.py
app/interfaces/: pulsedbusctl.py  system_backend.py  systemd_unit_interface.py  vdr_plugins.py  vdr_status.py
app/routers/: audio.py  auth.py  channelpedia.py  lircd2uinput.py  log.py  pulsedbusctl.py  system.py  vdr.py
app/static/: index.html
app/static/css/: login_form.css
app/static/js/: login.js
app/templates/: api.html  index.html  layout.html  login.html  usage.html
app/tools/: __init__.py  async_svdrp.py  channel_interfaces.py  channelpedia.py  dbus.py  display.py  epg.py  join_streams.py  sound.py  sse.py  state.py  svdrp.py  systeminfo.py  vdr_arguments.py  vdr_plugin_config.py  vdr_plugins.py
backend/: ansible_api.py  dbus_signal.py
debian/: changelog  control  copyright  de.yavdr.SystemBackend.conf  install  postinst  rules  run-yavdr-backend  yavdr-backend.install  yavdr-backend.postinst  yavdr-backend.service  yavdr-system-backend.service
src/yavdr_backend/: __main__.py  main.py  requirements.txt  system_backend.py
src/yavdr_backend/interfaces/: _state_.py  demo.py  lircd2uinput.py  pulsedbusctl.py  system_backend.py  systemd_dbus_interface.py  test.py  (+2 more)
src/yavdr_webfrontend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
system/: ansible_api.py
system_utils/: dbus.py  pam.py  usage.py
(+24 files in other folders)
