[project]
name = "yavdr-webfrontend"
authors = [{ "name" = "Alexander Grothe", "email" = "seahawk1986@gmx.de" }]
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "ansible",
    "pydbus",
    "ruamel.yaml",
    "uvicorn[standard]>=0.38.0",
    "dotenv>=0.9.9",
    "httpx[http2]>=0.28.1",
    "pytz>=2025.2",
    "pyjwt>=2.10.1",
    "pkgconfig>=1.5.5",
    "python-multipart>=0.0.21",
    "sdbus>=0.14.1.post0",
    "sse-starlette>=3.0.4",
    "ansible-runner>=2.4.2",
    "systemd-python>=235",
    "aiohttp>=3.13.2",
]

[tool.uv]
package = true

[project.scripts]
yavdr-backend = "yavdr_backend.main:run_backend"
yavdr-system-backend = "yavdr_backend.system_backend:main"
